# ScreenCutOcrCn

./: CMakeLists.txt  README.md  autogui.cpp  autogui.h  cnocr.cpp  label_cn.txt  main.cpp
