cmake_minimum_required(VERSION 3.14.0)
project(ScreenCutOcrCn VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV CONFIG REQUIRED)
find_package(FLTK CONFIG REQUIRED)
include_directories(D:/Lib/vcpkg/installed/x64-windows/includ D:/Lib/onnxruntime/include)
add_executable(ScreenCutOcrCn main.cpp cnocr.h cnocr.cpp modle.h modle.cpp autogui.h autogui.cpp screencut.cpp screencut.h hotkey.hpp)
#Set_Target_Properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
target_link_directories(ScreenCutOcrCn PUBLIC D:/Lib/onnxruntime/lib)
target_link_libraries(ScreenCutOcrCn PRIVATE ${OpenCV_LIBS} onnxruntime d3d11 fltk fltk_gl fltk_forms fltk_images dxgi gdiplus)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
