cmake_minimum_required(VERSION 3.10.0)
project(ScreenCutOcrCn VERSION 0.1.0)
find_package(OpenCV CONFIG REQUIRED)

add_executable(ScreenCutOcrCn main.cpp cnocr.h cnocr.cpp modle.h modle.cpp autogui.h autogui.cpp  hotkey.hpp)
set_target_properties(ScreenCutOcrCn PROPERTIES CXX_STANDARD 17)
target_compile_options(ScreenCutOcrCn PUBLIC "/Zc:__cplusplus" "/permissive-")
target_include_directories(ScreenCutOcrCn PUBLIC D:/Lib/vcpkg/installed/x64-windows/include D:/Lib/onnxruntime-training-win-x64-1.17.0/include D:/Lib/Qt/6.6.2/msvc2019_64/include)
#Set_Target_Properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
target_link_directories(ScreenCutOcrCn PUBLIC D:/Lib/onnxruntime-training-win-x64-1.17.0/lib D:/Lib/Qt/6.6.2/msvc2019_64/lib)
target_link_libraries(ScreenCutOcrCn PRIVATE ${OpenCV_LIBS} onnxruntime  Qt6Widgets Qt6Gui Qt6Core)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
